--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            color_snake: "#FFD700"
+            color_bg: "#000000"
+
           
           
       # push the content of <build_dir> to a branch
